--- a/wordle/src/app/game/game.component.html
+++ b/wordle/src/app/game/game.component.html
@@ -1,18 +1,33 @@
-<div class="alert alert-dismissible fade show my-4" role="alert" [ngClass]="checkRes ? 'alert-success' : 'alert-danger'" *ngIf="guess.length && guessInput.touched && showAlert">
-    <strong>{{guess}}</strong> {{checkRes ? 'was correct!' : 'was incorrect!'}}
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" (click)="showAlert=false"></button>
+<div class="alert alert-dismissible alert-danger fade show my-4" role="alert"
+    *ngIf="guess.length && guessInput.touched && showAlert && !won">
+    <strong>{{guess}}</strong> was incorrect!
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"
+        (click)="showAlert=false"></button>
 </div>
 
-<form action="" method="post" #guessForm="ngForm" (ngSubmit)="checkWord();" (keydown.enter)="$event.preventDefault()">
+<div class="alert alert-dismissible alert-success fade show my-4" role="alert" *ngIf="won">
+    <strong>{{answer}}</strong> was correct!
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+
+<form action="" method="post" #guessForm="ngForm" (ngSubmit)="checkWord();" ƒ (keydown.enter)="$event.preventDefault()">
     <div class="h-10">
         <label for="guess">Guess the magic word!</label>
         <div class="mb-3"><small>Press the submit button when you are ready to guess.</small></div>
-        <input type="text" class="form-control" id="guess" name="guess" placeholder="Type your guess here"
-            [(ngModel)]="guess" #guessInput="ngModel" [class.is-invalid]="guessInput.touched && !guess.length">
-        <div [ngStyle]="{'color': '#dc3545'}"><small *ngIf="guessInput.touched && !guess.length">Type in at least one character to guess</small></div>
+        <input type="text" class="form-control" id="guessIn" name="guessIn" placeholder="Type your guess here"
+            [(ngModel)]="guess" #guessInput="ngModel"
+            [class.is-invalid]="guessInput.touched && !guess.length || inputEntered || guessInput.errors?.['pattern']"
+            (keydown.enter)="inputEntered=true" pattern="[A-Za-z]+">
+        <div [ngStyle]="{'color': '#dc3545'}"><small *ngIf="guessInput.touched && !guess.length">Type in at least one
+                letter to guess</small></div>
+        <div [ngStyle]="{'color': '#dc3545'}"><small *ngIf="inputEntered">Please press the submit button to
+                guess.</small></div>
+        <div [ngStyle]="{'color': '#dc3545'}"><small *ngIf="guessInput.errors?.['pattern']">Please only type
+                letters.</small></div>
     </div>
     <div class="text-center mt-3 mb-5">
-        <button type="submit" class="btn btn-primary" id="submitBtn" [disabled]="(!guess.length) || checkRes">Submit</button>
+        <button type="submit" class="btn btn-primary mx-2" id="submitBtn"
+            [disabled]="(!guess.length) || won">Submit</button>
         <a href="" class="btn btn-danger" id="endGame" (click)="replay()">Replay</a>
     </div>
 </form>
@@ -20,17 +35,20 @@
 <div class="card">
     <div class="card-header">Previous Guesses</div>
     <div class="card-body">
+        <div class="text-center mb-4" [ngStyle]="{'color': 'green'}" *ngIf="won">
+            <h5>Congrats you won!</h5>
+          </div>
         <div class="accordion" id="accordionExample" *ngFor="let g of guesses; let i = index;">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="guess">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        [attr.data-bs-target]="'#collapse'+ i" aria-expanded="false"
+                    <button class="accordion-button" [ngClass]="i==0 ? '' : 'collapsed'" type="button"
+                        data-bs-toggle="collapse" [attr.data-bs-target]="'#collapse'+ i" aria-expanded="false"
                         [attr.aria-controls]="'collapse'+ i">
                         Guess {{guesses.length-i}}: {{g.guess}}
                     </button>
                 </h2>
-                <div id="collapse{{i}}" class="accordion-collapse collapse" aria-labelledby="guess"
-                    data-bs-parent="#accordionExample">
+                <div id="collapse{{i}}" class="accordion-collapse collapse" [ngClass]="i==0 ? 'show' : ''"
+                    aria-labelledby="guess" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <div href='#' class='list-group-item' aria-current='true'>
                             <div class='d-flex w-100 justify-content-between'>
