can't submit invalid inputs

--- a/wordle/src/app/game/game.component.html
+++ b/wordle/src/app/game/game.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="text-center mt-3 mb-5">
         <button type="submit" class="btn btn-primary mx-2" id="submitBtn"
-            [disabled]="(!guess.length) || won || guessInput.errors?.['pattern']">Submit</button>
+            [disabled]="(!guess.length) || won || guessInput.errors">Submit</button>
         <a href="" class="btn btn-danger" id="endGame" (click)="replay()">Replay</a>
     </div>
 </form>
